--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,12 +62,16 @@ jobs:
           export OMGO_PLUGINS="git node rust ruby python"
           ./oh-my-go prompt --shell=bash --pwd=$PWD --user=$USER --exitcode=$? --hostname=$HOST
       
+      - name: "Install zsh"
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt install -y zsh
+
       - name: "Test on zsh"
         shell: zsh {0}
         run: |
           export OMGO_SHOW_USER_HOSTNAME=1
           export OMGO_PLUGINS="git node rust ruby python"
-          ./oh-my-go prompt --shell=zsh --pwd=$PWD --user=$USER --exitcode=$? --hostname=$HOST
+          ./oh-my-go prompt --shell=zsh --pwd=$PWD --user=$USER --exitcode=$? --hostname=$HOSTNAME
       
       - name: "Install fish"
         uses: fish-actions/install-fish@v1.1.0
